GraphRenderer.js works now
GraphRenderer renders the Graph now instead of the Graph itself.
Also translated the UI to English.

--- a/index.html
+++ b/index.html
@@ -17,24 +17,25 @@
   <body>
     <rechts>
       <p><input type="checkbox" id="shouldShowAntsBoxID">
-        Ameisen anzeigen
+        Show all solutions
       </input></p>
       <p>
         <input type="checkbox" id="shouldShowBestSolutionBoxID">
-          beste Lösung Anzeigen
+          Show beest solution
         </input>
       </p>
       <p id=vertexCountLabelID></p>
       <input type="range" min="1" max="100" value="20" class="slider" id="vertexCountSliderID">
       </input>
       <p>
-        <button id="resetButtonID">Neustart</button>
+        <button id="resetButtonID">Reset</button>
       </p>
     </rechts>
     <links>
       <script src="src/ant/weightedPicker.js"></script></td>
       <script src="src/ant/graph.js"></script></td>
       <script src="src/ant/ant.js"></script></td>
+      <script src="src/GraphRenderer.js"></script>
       <script src="src/sketchmain.js"></script></td>
     </links>
   </body>
